# bouncer

./: .dockerignore  .eslintrc  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  package-lock.json  package.json
.github/workflows/: build_server.yaml  deploy.yaml  rust-audit.yaml  rust.yml
client/wasm/: Cargo.toml
client/wasm/src/: lib.rs
proto/: bouncer.proto
server/: Cargo.toml  build.rs
server/src/: bouncer.rs  main.rs  message.rs  sink.rs  source.rs
server/src/grpc/: server.rs
server/src/history/: mod.rs
server/src/irc/: client.rs  message.rs  server.rs  transport.rs
src/: bouncer.rs  client.rs  main.rs  message.rs  server.rs  sink.rs  source.rs
src/grpc/: server.rs
src/irc/: client.rs  message.rs  mod.rs  server.rs  transport.rs
src/irc/client/: client_impl.rs
src/irc/server/: server_impl.rs
webpack/: webpack.config.common.js  webpack.config.common.ts  webpack.config.prod.js
