[package]
name = "bouncer"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "^2.33" }
irc = { version = "^0.14" }
log = { version = "^0.4" }
futures = { version = "^0.3" }
pretty_env_logger = { version = "^0.4" }
async-std = { version = "^1.6", features = ["tokio02", "attributes"] }