[package]
name = "bouncer"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "^2.33" }
log = { version = "^0.4" }
futures = { version = "^0.3" }
pretty_env_logger = { version = "^0.4" }
irc-proto = { version = "^0.14" }
async-std = { version = "^1.6", features = ["tokio02", "attributes", "unstable"] }