[package]
name = "server"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "^2.33" }
log = { version = "^0.4" }
futures = { version = "^0.3" }
pretty_env_logger = { version = "^0.4" }
serde = { version = "^1.0", features = ["derive"] }
async-std = { version = "^1.8", features = ["attributes", "unstable", "tokio02"] }
async-trait = { version = "^0.1" }
tonic = { version = "^0.5" }
prost = { version = "^0.8" }

[build-dependencies]
tonic-build = { version = "^0.5" }
