[package]
name = "server"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "^2.33" }
log = { version = "^0.4" }
futures = { version = "^0.3" }
pretty_env_logger = { version = "^0.4" }
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.13", features = ["full"] }
tokio-stream = { version = "^0.1", features = ["io-util", "net", "sync"] }
async-trait = { version = "^0.1" }
tonic = { version = "^0.6" }
prost = { version = "^0.9" }

[build-dependencies]
tonic-build = { version = "^0.6" }
